# tombi

./: .gitcommitrule  .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  NOTE.md  README.md  TODO.ja.md  biome.json  clippy.toml  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rust-toolchain.toml  sample.toml  tombi.code-workspace  tombi.schema.json  tombi.toml  tombi.yaml  toml-toolkit.code-workspace  toml.ungram  type-test.toml
core/toml-cli/: Cargo.toml
core/toml-cli/src/: app.rs  arg.rs  error.rs  main.rs
core/toml-cli/src/arg/: file.rs
core/toml-cli/src/command/: format.rs
core/toml-lsp/: Cargo.toml
core/toml-lsp/src/: app.rs  main.rs  server.rs  version.rs
core/toml-lsp/src/server/: handler.rs
crates/ast/: Cargo.toml
crates/ast-editor/: Cargo.toml
crates/ast-editor/src/: ast_change.rs  ast_editor.rs  change.rs  edit.rs  editor.rs  lib.rs  node.rs  rule.rs
crates/ast-editor/src/edit/: array.rs  array_of_table.rs  array_of_tables.rs  inline_table.rs  key_value.rs  root.rs  table.rs  value.rs
crates/ast-editor/src/rule/: array_values_order.rs  (+8 more)
crates/ast/src/: algo.rs  builder.rs  generated.rs  impls.rs  lib.rs  node.rs  support.rs
crates/config/: Cargo.toml
crates/config/src/: error.rs  format.rs  lib.rs  lint.rs  schema.rs  server.rs  toml_version.rs  types.rs
crates/diagnostic/: Cargo.toml
crates/diagnostic/examples/: diagnostics.rs
crates/diagnostic/src/: level.rs  lib.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/examples/: diagnostics.rs
crates/diagnostics/src/: formatter.rs  level.rs  lib.rs  printer.rs
crates/document/: Cargo.toml  README.md
crates/document-tree/: Cargo.toml  README.md
crates/document-tree/src/: error.rs  key.rs  lib.rs  root.rs  support.rs  value.rs  value_type.rs
crates/document/src/: de.rs  error.rs  key.rs  lib.rs  node.rs  range.rs  value.rs
crates/document/tests/: test_toml_file.rs
crates/formatter/: Cargo.toml
crates/formatter/src/: context.rs  definitions.rs  error.rs  format.rs  formatter.rs  lib.rs  options.rs
crates/formatter/tests/: table_keys_order.rs  test_complex.rs  test_formatter.rs  x_tombi_order.rs
crates/json-schema-store/: Cargo.toml
crates/json-schema-store/src/: accessor.rs  hover_hint.rs  lib.rs  schema.rs  store.rs  value_type.rs
crates/json-schema-store/tests/: test_tombi_schema.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: cursor.rs  error.rs  input.rs  lexed.rs  lib.rs  syntax.rs  token.rs
crates/lexer/tests/: test_lexer.rs
crates/linter/: Cargo.toml
crates/linter/src/: error.rs  lib.rs  lint.rs  linter.rs  options.rs  rule.rs  validation.rs  warning.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: document.rs  lib.rs  server.rs  toml.rs
crates/parser/: Cargo.toml
crates/parser/src/: builder.rs  container.rs  error.rs  event.rs  event_old.rs  grammar.rs  input.rs  lang.rs  lexed.rs  lib.rs  lib_old.rs  marker.rs  node.rs  output.rs  parse.rs  parsed.rs  parser.rs  parser_old.rs  step.rs  syntax_kind.rs  token_set.rs  validation.rs  version.rs
crates/rg-tree/: Cargo.toml  README.md
crates/rg-tree/src/: arc.rs  cursor.rs  green.rs  lib.rs  red.rs  sll.rs  syntax_text.rs  utility_types.rs
crates/schema-store/: Cargo.toml  README.md
crates/schema-store/src/: accessor.rs  arena.rs  error.rs  json.rs  json_schema.rs  lib.rs  options.rs  schema.rs  store.rs  value_type.rs
crates/schema-store/tests/: test_tombi_schema.rs
crates/server/: Cargo.toml
crates/server/src/: backend.rs  completion.rs  document.rs  document_symbol.rs  goto_type_definition.rs  handler.rs  hover.rs  lib.rs  semantic_tokens.rs
crates/server/tests/: completion_edit.rs  completion_labels.rs  goto_type_definition.rs  hover.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: builder.rs  error.rs  generated.rs  kind.rs  lang.rs  language.rs  lib.rs  syntax_kind.rs  token.rs  version.rs
crates/text/: Cargo.toml
crates/text/src/: features.rs  lib.rs  offset.rs  position.rs  range.rs  relative_position.rs  size.rs  span.rs  text_range.rs  text_size.rs  traits.rs
crates/tombi-ast/: Cargo.toml
crates/tombi-ast-editor/: Cargo.toml
crates/tombi-ast-editor/src/: change.rs  edit.rs  editor.rs  lib.rs  node.rs  rule.rs
crates/tombi-ast/src/: algo.rs  generated.rs  lib.rs
crates/tombi-config/: Cargo.toml
crates/tombi-config/src/: format.rs  lib.rs  lint.rs  schema.rs  server.rs  types.rs
crates/tombi-date-time/: Cargo.toml  README.md
crates/tombi-date-time/src/: lib.rs  local_date.rs  local_date_time.rs  local_time.rs  private.rs
crates/tombi-date-time/tests/: deserialize.rs  serialize.rs  test_serialize.rs
crates/tombi-document-tree/: Cargo.toml  README.md
crates/tombi-document-tree/src/: error.rs  key.rs  lib.rs  root.rs  value.rs
toml-test/: Cargo.toml  README.md
toml-test/result/: decode-v1.0.0.txt  decode-v1.1.0-preview.txt  decode.txt
toml-test/src/: lib.rs  value.rs
typescript/: Cargo.toml
typescript/@tombi-toml/cli-darwin-arm64/: package.json
typescript/@tombi-toml/cli-darwin-x64/: package.json
typescript/@tombi-toml/cli-linux-arm64/: package.json
typescript/@tombi-toml/cli-linux-arm64-musl/: package.json
typescript/@tombi-toml/cli-linux-x64/: package.json
typescript/@tombi-toml/cli-linux-x64-musl/: package.json
typescript/@tombi-toml/cli-win32-arm64/: package.json
typescript/@tombi-toml/cli-win32-x64/: package.json
typescript/@tombi-toml/tombi/: package.json  package.jsonc
typescript/tombi/: README.md  package-lock.json  package.json
typescript/tombi-cli/: README.md  package-lock.json  package.json
typescript/tombi-cli/src/: index.ts
typescript/tombi/scripts/: install.js  postinstall.js  test-install.js  test-postinstall.js
xtask/: Cargo.toml  toml.ungram
xtask/src/: app.rs  codegen.rs  command.rs  glue.rs  main.rs  utils.rs
xtask/src/app/: command.rs
xtask/src/codegen/: ast_node.rs  ast_token.rs  grammar.rs  syntax_kind.rs  syntax_kind_src.rs
xtask/src/command/: codegen.rs  codegen_grammar.rs  codegen_grammer.rs  codegen_jsonschema.rs  dist.rs  set_version.rs  toml_test.rs
(+1143 files in other folders)
