[workspace]
resolver = "2"
members = [
  "crates/*",
  "editors/zed",
  "extensions/*",
  "rust/*",
  "toml-test",
  "xtask",
]

[workspace.package]
version = "0.0.0"  # We use git tags for versioning. This is just a placeholder.
authors = ["yassun7010 <yassun7010@outlook.com>"]
edition = "2021"
repository = "https://github.com/tombi-toml/tombi"
license = "MIT"

[workspace.dependencies]
ahash = "0.8.11"
anyhow = "1.0.98"
assert_matches = "1.5.0"
camino = "1.1.9"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive", "string"] }
clap-verbosity-flag = "3.0.2"
futures = "0.3.31"
futures-util = "0.3.31"
glob = "0.3.2"
indexmap = { version = "2.9.0", features = ["serde"] }
itertools = "0.14.0"
maplit = { version = "1.0" }
nu-ansi-term = "0.50.1"
pretty_assertions = "1.4.1"
proc-macro2 = "1.0.95"
quote = "1.0.40"
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = [
  "json",
  "rustls-tls",
] }
rstest = { version = "0.25.0" }
rustc-hash = { version = "2.1.1" }
schemars = { version = "1.0.0-alpha.17", features = ["preserve_order", "url2"] }
semver = { version = "1.0.26" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
serde_tombi = { path = "rust/serde_tombi" }
textwrap = { version = "0.16.2" }
thiserror = { version = "2.0.12" }
tokio = { version = "1.45.0", features = ["fs", "io-std", "rt-multi-thread"] }
tombi-ast = { path = "crates/tombi-ast" }
tombi-ast-editor = { path = "crates/tombi-ast-editor" }
tombi-config = { path = "crates/tombi-config" }
tombi-date-time = { path = "crates/tombi-date-time" }
tombi-diagnostic = { path = "crates/tombi-diagnostic" }
tombi-document = { path = "crates/tombi-document" }
tombi-document-tree = { path = "crates/tombi-document-tree" }
tombi-extension = { path = "crates/tombi-extension" }
tombi-extension-cargo = { path = "extensions/tombi-extension-cargo" }
tombi-formatter = { path = "crates/tombi-formatter" }
tombi-json = { path = "crates/tombi-json" }
tombi-json-lexer = { path = "crates/tombi-json-lexer" }
tombi-json-syntax = { path = "crates/tombi-json-syntax" }
tombi-json-value = { path = "crates/tombi-json-value" }
tombi-lexer = { path = "crates/tombi-lexer" }
tombi-linter = { path = "crates/tombi-linter" }
tombi-lsp = { path = "crates/tombi-lsp" }
tombi-parser = { path = "crates/tombi-parser" }
tombi-rg-tree = { path = "crates/tombi-rg-tree" }
tombi-schema-store = { path = "crates/tombi-schema-store" }
tombi-syntax = { path = "crates/tombi-syntax" }
tombi-test-lib = { path = "crates/tombi-test-lib" }
tombi-text = { path = "crates/tombi-text" }
tombi-toml-text = { path = "crates/tombi-toml-text" }
tombi-toml-version = { path = "crates/tombi-toml-version" }
tombi-extension-uv = { path = "extensions/tombi-extension-uv" }
tombi-validator = { path = "crates/tombi-validator" }
tombi-x-keyword = { path = "crates/tombi-x-keyword" }
tower-lsp = { version = "0.20.0" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
typed-builder = "0.21.0"
unicode-segmentation = "1.12.0"
url = { version = "2.5.4", features = ["serde"] }
zed_extension_api = "0.1.0"
