[project]
name = "tombi"
version = "0.0.1"
readme = "python/README.md"
description = "Reserved package for tombi"
requires-python = ">=3.10"
dependencies = []

[project.urls]
GitHub = "https://github.com/yassun7010/tombi"

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.7.4",
]

[tool.maturin]
bindings = "bin"
manifest-path = "rust/tombi-cli/Cargo.toml"
module-name = "tombi"
python-source = "python/src"
