[project]
name = "tombi"
version = "0.3.31"  # We use git tags for versioning. This is just a placeholder.
description = "Reserved package for tombi"
readme = "python/tombi/README.md"
requires-python = ">=3.10"
dependencies = []

[project.urls]
GitHub = "https://github.com/tombi-toml/tombi"

[dependency-groups]
dev = [
  "pytest>=8.3.3",
  "ruff>=0.7.4",
]

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "bin"
manifest-path = "rust/tombi-cli/Cargo.toml"
module-name = "tombi"
python-source = "python/tombi/src"

[tool.uv.workspace]
members = ["python/tombi-beta"]
