[package]
name = "toml-test"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[[bin]]
name = "decode"
path = "bin/decode.rs"

[dependencies]
anyhow = { workspace = true }
ast = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
document-tree = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
parser = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
text = { workspace = true }
toml-version = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
textwrap = { workspace = true }
