[package]
name = "toml-test"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[[bin]]
name = "decode"
path = "bin/decode.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
parser = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tombi-ast = { workspace = true }
tombi-document-tree = { workspace = true }
tombi-text = { workspace = true }
tombi-toml-version = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
textwrap = { workspace = true }
