[workspace]
resolver = "3"
members = ["cl", "en", "hq", "xx", "zz"]

[profile.release]
codegen-units = 1  # Fewer codegen units allow more aggressive inter-procedural optimizations
debug = false  # No debug info for maximum performance
incremental = false  # Disable incremental compilation for better optimization
lto = true  # Link-time optimization (beneficial for speed)
opt-level = 3  # Maximum optimization for speed
overflow-checks = false  # Disable integer overflow checks for speed
panic = "abort"  # Terminate on panic (faster than unwinding)
strip = true  # Strip symbols from binary (doesn't affect runtime speed)

[profile.dev]
debug = true  # Full debug info
opt-level = 0  # No optimization for faster compilation
