[package]
name = "xtask"
version = "0.0.1"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
convert_case = "0.6.0"
either = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
thiserror = { workspace = true }
ungrammar = "1.16.1"
