[package]
name = "xtask"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
convert_case = "0.6.0"
either = { workspace = true }
flate2 = "1.0.35"
itertools = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
thiserror = { workspace = true }
time = { version = "0.3.36", default-features = false }
ungrammar = "1.16.1"
xshell = "0.2.7"
zip = { version = "2.2.1", default-features = false, features = ["deflate", "time"] }
