[package]
name = "xtask"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
convert_case.workspace = true
flate2.workspace = true
itertools.workspace = true
pretty_assertions.workspace = true
proc-macro2.workspace = true
quote.workspace = true
schemars = { workspace = true, features = ["chrono04"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time = { workspace = true, default-features = false }
tombi-config = { workspace = true, features = ["jsonschema"] }
ungrammar.workspace = true
xshell.workspace = true
zip = { workspace = true, default-features = false, features = [
  "deflate",
  "time",
] }
