[package]
name = "toml-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "toml"
path = "src/main.rs"

[dependencies]
formatter = { path = "../../crates/formatter" }

clap = { version = "4.5.20", features = ["derive"] }
thiserror.workspace = true
