[package]
name = "toml-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "toml"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
clap-verbosity-flag = { workspace = true }
diagnostics = { workspace = true }
formatter = { workspace = true }
glob = "0.3.1"
nu-ansi-term = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
