[package]
name = "ast-editor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ast.workspace = true
futures.workspace = true
itertools.workspace = true
schema-store.workspace = true
syntax.workspace = true
text.workspace = true
tracing.workspace = true
