[package]
name = "ast"
version = "0.0.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
itertools = { workspace = true }
syntax = { workspace = true }
text = { workspace = true }
thiserror = { workspace = true }
toml-version = { workspace = true }
