[package]
name = "config"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
clap = ["dep:clap"]
serde = ["dep:serde"]
jsonschema = ["serde", "dep:schemars", "dep:serde_json"]

[dependencies]
schemars = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
