[package]
name = "config"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["serde", "clap"]
clap = ["dep:clap"]
serde = ["dep:serde"]
jsonschema = ["serde", "dep:schemars", "toml-version/jsonschema"]

[dependencies]
clap = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
toml = { workspace = true }
toml-version = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
x-tombi.workspace = true

[dev-dependencies]
assert_matches.workspace = true
