[package]
name = "config"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
toml-version = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
x-tombi.workspace = true

[dev-dependencies]
assert_matches.workspace = true

[features]
clap = ["dep:clap"]
default = ["clap", "serde"]
jsonschema = ["dep:schemars", "serde", "toml-version/jsonschema"]
serde = ["dep:serde"]
