[package]
name = "diagnostic"
version = "0.0.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[features]
default = ["lsp"]
lsp = ["tower-lsp"]

[dependencies]
nu-ansi-term = { workspace = true }
serde = { workspace = true }
text = { workspace = true }
thiserror = { workspace = true }
tower-lsp = { workspace = true, optional = true }
tracing = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
clap-verbosity-flag.workspace = true
tracing-subscriber = { workspace = true }
