[package]
name = "document-tree"
version = "0.0.0"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[features]
default = ["diagnostic"]
diagnostic = ["dep:diagnostic"]

[dependencies]
ast = { workspace = true }
chrono = { workspace = true }
diagnostic = { workspace = true, optional = true }
indexmap = { workspace = true }
itertools = { workspace = true }
text = { workspace = true }
thiserror = { workspace = true }
toml-version = { workspace = true }
tracing.workspace = true
