[package]
name = "document"
version = "0.0.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[features]
default = ["serde"]
lsp = ["dep:tower-lsp", "text/lsp"]
serde = ["dep:serde", "indexmap/serde", "chrono/serde"]

[dependencies]
ast = { workspace = true }
chrono = { workspace = true }
document-tree = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true, optional = true }
text = { workspace = true }
thiserror = { workspace = true }
toml-version = { workspace = true }
tower-lsp = { workspace = true, optional = true }

[dev-dependencies]
parser = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
textwrap = { workspace = true }
