[package]
name = "document"
version = "0.0.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
chrono = { workspace = true }
date-time = { workspace = true }
document-tree = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
parser = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true }
text = { workspace = true }
thiserror.workspace = true
tombi-ast = { workspace = true }
toml-text = { workspace = true }
toml-version = { workspace = true }
tower-lsp = { workspace = true, optional = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
test-lib = { workspace = true }
textwrap = { workspace = true }

[features]
default = ["serde"]
lsp = ["dep:tower-lsp", "text/lsp"]
serde = ["chrono/serde", "dep:serde", "indexmap/serde"]
