[package]
name = "formatter"
version = "0.0.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
ast = { workspace = true }
parser = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
syntax = { workspace = true }
rstest = { workspace = true }
tracing = { workspace = true }
text = { workspace = true }
diagnostics = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
textwrap.workspace = true
tracing-subscriber = { workspace = true }
