[package]
name = "formatter"
version = "0.0.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
ast = { workspace = true }
parser = { workspace = true, features = ["diagnostic"] }
schemars = { workspace = true }
serde = { workspace = true }
syntax = { workspace = true }
tracing = { workspace = true }
text = { workspace = true }
diagnostic = { workspace = true }
config = { workspace = true }
itertools.workspace = true

[dev-dependencies]
assert_matches = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
textwrap = { workspace = true }
tracing-subscriber = { workspace = true }
