[package]
name = "formatter"
version = "0.0.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
ast = { workspace = true }
ast-editor = { workspace = true }
config = { workspace = true }
diagnostic = { workspace = true }
document-tree = { workspace = true }
itertools = { workspace = true }
parser = { workspace = true }
schema-store = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
syntax = { workspace = true }
text = { workspace = true }
tokio.workspace = true
tracing = { workspace = true }
unicode-segmentation = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
test-lib = { workspace = true }
textwrap = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing-subscriber = { workspace = true }

[features]
jsonschema = ["dep:schemars", "serde"]
serde = ["dep:serde"]
