[package]
name = "json-schema-store"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
ast = { workspace = true }
dashmap = { workspace = true }
document = { workspace = true }
document-tree = { workspace = true }
jsonschema = "0.26.1"
reqwest = { workspace = true, features = ["rustls-tls"] }
serde_json = { workspace = true }
text = { workspace = true }
url = "2.5.4"
