[package]
name = "json-schema-store"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
ast = { workspace = true }
dashmap = { workspace = true }
document = { workspace = true }
document-tree = { workspace = true }
serde_json = { workspace = true }
text = { workspace = true }
url = "2.5.4"
