[package]
name = "lexer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
itertools.workspace = true
regex.workspace = true
syntax.workspace = true
text.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
textwrap.workspace = true
