[package]
name = "linter"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
ast = { workspace = true }
config = { workspace = true, features = ["serde"] }
diagnostic = { workspace = true }
document-tree = { workspace = true, features = ["diagnostic"] }
parser = { workspace = true, features = ["diagnostic"] }
schema-store.workspace = true
schemars = { workspace = true }
serde = { workspace = true }
syntax = { workspace = true }
text = { workspace = true }
thiserror = { workspace = true }
