[package]
name = "linter"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
ast = { workspace = true }
config = { workspace = true }
diagnostic = { workspace = true }
document-tree = { workspace = true }
futures.workspace = true
itertools.workspace = true
parser = { workspace = true }
regex.workspace = true
schema-store.workspace = true
schemars = { workspace = true }
serde = { workspace = true }
syntax = { workspace = true }
text = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
validator.workspace = true

[dev-dependencies]
assert_matches.workspace = true
pretty_assertions.workspace = true
test-lib.workspace = true
tokio = { workspace = true, features = ["macros"] }
tracing-subscriber.workspace = true
