[package]
name = "lsp"
version = "0.0.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
ast.workspace = true
camino = { workspace = true }
clap = { workspace = true, features = ["string"] }
clap-verbosity-flag = { workspace = true }
config.workspace = true
crossbeam-channel = "0.5.13"
dashmap = "6.1.0"
document = { workspace = true, features = ["lsp", "load"] }
formatter.workspace = true
futures = { workspace = true }
futures-util = { workspace = true }
parser.workspace = true
rustc-hash = { workspace = true }
semver = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
text = { workspace = true, features = ["lsp"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-std", "rt"] }
tower-lsp = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
