[package]
name = "parser"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ast = { workspace = true }
drop_bomb = "0.1.5"
itertools = { workspace = true }
rg-tree = { workspace = true }
syntax = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
text.workspace = true
lexer = { version = "0.0.1", path = "../lexer" }

[dev-dependencies]
rstest.workspace = true
textwrap.workspace = true
tracing-subscriber = { workspace = true }
