[package]
name = "parser"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["diagnostic"]
diagnostic = ["dep:diagnostic"]

[dependencies]
ast = { workspace = true }
config.workspace = true
diagnostic = { workspace = true, optional = true }
document-tree = { workspace = true }
drop_bomb = "0.1.5"
itertools = { workspace = true }
lexer = { workspace = true }
rg-tree = { workspace = true }
syntax = { workspace = true }
text = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions.workspace = true
rstest = { workspace = true }
textwrap = { workspace = true }
tracing-subscriber = { workspace = true }
