[package]
name = "rg-tree"
description = "A `Red/Green Tree` implementation."
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
serde = ["dep:serde", "text/serde"]

[dependencies]
countme = "3.0.1"
hashbrown = "0.15.0"
rustc-hash = "2.0.0"
serde = { workspace = true, optional = true }
text = { workspace = true }
