[package]
name = "schema-store"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
ahash = { workspace = true }
ast = { workspace = true }
config.workspace = true
document = { workspace = true }
document-tree = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
regex.workspace = true
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
text = { workspace = true }
thiserror = { workspace = true }
tokio.workspace = true
tracing = { workspace = true }
url = { workspace = true }
x-tombi.workspace = true

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest.workspace = true
