[package]
name = "schema-store"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
ahash = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
regex.workspace = true
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio.workspace = true
tombi-ast = { workspace = true }
tombi-config.workspace = true
tombi-document = { workspace = true }
tombi-document-tree = { workspace = true }
tombi-text = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
x-tombi.workspace = true

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest.workspace = true
