[package]
name = "server"
version = "0.0.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
ahash.workspace = true
ast = { workspace = true }
camino = { workspace = true }
chrono.workspace = true
clap = { workspace = true, optional = true }
config = { workspace = true }
crossbeam-channel = "0.5.13"
diagnostic = { workspace = true }
document = { workspace = true }
document-tree = { workspace = true }
formatter = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
linter = { workspace = true }
parser = { workspace = true }
regex.workspace = true
rustc-hash = { workspace = true }
schema-store = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde-tombi = { workspace = true }
serde_json = { workspace = true }
syntax.workspace = true
text = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-lsp = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
validator.workspace = true
x-tombi.workspace = true

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }
tempfile = { version = "3.15.0" }
test-lib = { workspace = true }
textwrap = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

[features]
clap = ["dep:clap"]
default = ["clap"]
